# linux_monitor_system

./: CMakeLists.txt  README.md
docs/: manager.md  worker.md  一些问题.md  性能数据处理.md  性能数据说明.md  架构.drawio
manager/: CMakeLists.txt  manager.cpp
manager/include/: host_manager.hpp  query_manager.hpp  scoring_profile.hpp
manager/include/rpc/: grpc_server.hpp  query_service.hpp  rpc_client.hpp
manager/scripts/: start_manager.py  stop_manager.py
manager/sql/: server.sql
manager/src/: host_manager.cpp  query_manager.cpp
manager/src/rpc/: grpc_server.cpp  query_service.cpp  rpc_client.cpp
proto/: CMakeLists.txt  monitor_info.proto  query_api.proto
scripts/: env.sh  start.sh  stop.sh
web_dashboard_example/: README.md  package-lock.json  package.json  server.js
web_dashboard_example/public/: app.js  index.html  styles.css
worker/: CMakeLists.txt  worker.cpp
worker/include/monitor/: cpuload_monitor.hpp  cpusoftirq_monitor.hpp  cpustate_monitor.hpp  disk_monitor.hpp  hostinfo_monitor.hpp  memory_monitor.hpp  metric_collector.hpp  monitor.hpp  monitor_struct.h  net_ebpf_monitor.hpp  net_monitor.hpp  net_stats.skel.h  user_monitor.hpp
worker/include/rpc/: grpc_manager_impl.hpp  monitor_pusher.hpp
worker/include/util/: readfile.hpp
worker/scripts/: start_worker.py  stop_worker.py
worker/src/ebpf/: CMakeLists.txt  net_stats.bpf.c  net_stats.h  vmlinux.h
worker/src/ebpf/.output/: net_stats.skel.h
worker/src/kmod/: CMakeLists.txt  Kbuild  cpu_stat_collector.ko  softirq_collector.ko
worker/src/monitor/: cpuload_monitor.cpp  cpusoftirq_monitor.cpp  cpustate_monitor.cpp  disk_monitor.cpp  hostinfo_monitor.cpp  memory_monitor.cpp  metric_collector.cpp  net_ebpf_monitor.cpp  net_monitor.cpp  user_monitor.cpp
worker/src/rpc/: grpc_manager_impl.cpp  monitor_pusher.cpp
